# NewOswan

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  dumpinfo.c  main.c  main.cpp  resource.h  testserial.c
.github/workflows/: cmake.yml  codeql-analysis.yml
gamedata/: wonderswan_color_metadata.json  wonderswan_metadata.json
irom_stub/: Makefile  irom_stub.asm
oswan/: Makefile  Wondersnake.txt  col.txt  gui.aps  gui.rc  main.cpp  resource.h  wonderswan.dsp  wonderswan.dsw  ws.txt
oswan/source/: 2xSaI.cpp  2xSaI.h  SDLptc.h  audio.cpp  audio.h  emulate.cpp  gpu.cpp  gpu.cpp.orig  gpu.h  ieeprom.h  initialIo.h  io.cpp  io.h  log.cpp  memory.cpp  memory.h  rom.cpp  rom.h  ticker  ticker.asm  ticker.h  types.h  ws.cpp  ws.h
oswan/source/filters/: 2xsai.h  doubled.h  filter_partA.h  filter_partB.h  filter_partC.h  filter_partD.h  filter_partE.h  halfscanlines.h  interpolate.h  scanlines.h  special.h  standard.h  super2xsai.h  supereagle.h
oswan/source/nec/: nec.cpp  nec.h  necea.h  necinstr.h  necintrf.h  necmodrm.h
oswan/source/temp/: key.h
seal-hack/: Makefile
seal-hack/examples/: example1  example2  example2.c  example3  example4  example4.c  example5  example6  mk  mk.bat
seal-hack/examples/example1.dSYM/Contents/Resources/DWARF/: example1
seal-hack/examples/example2.dSYM/Contents/Resources/DWARF/: example2
seal-hack/examples/example3.dSYM/Contents/: Info.plist
seal-hack/examples/example3.dSYM/Contents/Resources/DWARF/: example3
seal-hack/examples/example4.dSYM/Contents/: Info.plist
seal-hack/examples/example4.dSYM/Contents/Resources/DWARF/: example4
seal-hack/examples/example5.dSYM/Contents/: Info.plist
seal-hack/examples/example5.dSYM/Contents/Resources/DWARF/: example5
seal-hack/examples/example6.dSYM/Contents/: Info.plist
seal-hack/examples/example6.dSYM/Contents/Resources/DWARF/: example6
seal-hack/examples/vb/: form1.frm  project1.vbp  project1.vbw  splash.frm
seal-hack/include/: audio.h
seal-hack/src/: Makefile  allegdrv.c  audio.c  audio.h  iofile.c  mixdrv.c  modeng.c  modfile.c  mp  mp.c  msdos.c  mtmfile.c  os2drv.c  osxdrv.c  s3mfile.c  sdldrv.c  wavfile.c  xmfile.c
seal-hack/src/MacOSX/: Makefile
source/: CMakeLists.txt  SDLptc.h  audio.c  audio.cpp  audio.h  display.c  emulate.c  emulate.cpp  emulate.h  file_access.c  gpu.c  gpu.h  io.c  io.cpp  io.h  log.c  log.h  md5.c  memory.c  memory.cpp  memory.h  rom.c  rom.cpp  rom.h  ws.c  ws.cpp  ws.h  wsrom.c
source/includes/: audio.h  device.h  emulate.h  file_access.h  gpu.h  interrupt_controller.h  io.h  log.h  md5.h  memory.h  nec.h  nec_debugger.h  necintrf.h  rom.h  ws.h  wsrom.h
source/includes/peripherals/: debug.h  interrupt_controller.h
source/nec/: CMakeLists.txt  nec.c  nec.cpp  nec.h  nec_debugger.c  nec_debugger.h  necea.h  necinstr.h  necintrf.h  necmodrm.h  v30debug.cpp
source/peripherals/: audio.c  buttons.c  color_gpu.c  color_system.c  debug.c  dma.c  eeprom.c  gpu_color.c  gpu_mono.c  interrupt_controller.c  mono_gpu.c  mono_system.c  rs232.c  rtc.c  system_color.c  system_mono.c  timer.c  universal_luxor.c
